--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ __pycache__/
 # C extensions
 *.so
 
+venv/
 # Distribution / packaging
 .Python
 build/
@@ -114,6 +115,7 @@ venv.bak/
 .spyderproject
 .spyproject
 
+*.sqlite3
 # Rope project settings
 .ropeproject
 
